fixed photo alignment

--- a/application/app/src/pages/home/Home.css
+++ b/application/app/src/pages/home/Home.css
@@ -5,7 +5,7 @@
 
 .home-banner {
     height: 70vh;
-    margin: 1px 0px 1px 490px;
+    float: right;
 }
 
 .home-h2 {
